--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <span>Insert rating here</span> / 10
   </p>
   <h3>Comment:</h3>
-  <p>
+  <p id="comments">
     Insert comment here
   </p>
 
